Replace the Product collection cross-sells collection in the Cart block (#60278)
* Remove the Cart Cross-Sells Block from the inserter and offer a transform option to the Product collection block
Part of soft-deprecation approach

* WIP

* Improve attributes handling of the cross-sell definition and apply to the cart block contenxt

* Align the upsells collection with the cross-sells one

* Hide the old cross sells from the inserter

* update default template

* Limit detection for the cart context to the cart block;
currently the front-end editor logic doesn't handle other contexts

* Update comment

* Fix test failures

* Update tests

* Add changelog

* Update cart tests to use the product collection block

* fix php error

* Add test for transform

* Keep cart checkout old detection and add block detection as well

* Improve test heading detection

* Update test

* Remove leftover

* improve tests

* Use 1 row with 3 products for crosssells in cart

* update tests

* Update plugins/woocommerce/includes/class-wc-install.php

Co-authored-by: Karol Manijak <20098064+kmanijak@users.noreply.github.com>

* Localize the cross-sells heading in template

* Revert using a specific cart cross-sells attributes object, and overwrite in place the default one

* Remove unnecessary mock

---------

Co-authored-by: Karol Manijak <20098064+kmanijak@users.noreply.github.com>

--- a/plugins/woocommerce/client/blocks/tests/e2e/bin/pages/cart.html
+++ b/plugins/woocommerce/client/blocks/tests/e2e/bin/pages/cart.html
@@ -1,79 +1,124 @@
 <!-- wp:woocommerce/cart -->
-<div class="wp-block-woocommerce-cart alignwide is-loading"><!-- wp:woocommerce/filled-cart-block -->
-<div class="wp-block-woocommerce-filled-cart-block"><!-- wp:woocommerce/cart-items-block -->
-<div class="wp-block-woocommerce-cart-items-block"><!-- wp:woocommerce/cart-line-items-block -->
-<div class="wp-block-woocommerce-cart-line-items-block"></div>
-<!-- /wp:woocommerce/cart-line-items-block -->
+<div class="wp-block-woocommerce-cart alignwide is-loading">
+	<!-- wp:woocommerce/filled-cart-block -->
+	<div class="wp-block-woocommerce-filled-cart-block">
+		<!-- wp:woocommerce/cart-items-block -->
+		<div class="wp-block-woocommerce-cart-items-block">
+			<!-- wp:woocommerce/cart-line-items-block -->
+			<div class="wp-block-woocommerce-cart-line-items-block"></div>
+			<!-- /wp:woocommerce/cart-line-items-block -->
 
-<!-- wp:woocommerce/cart-cross-sells-block -->
-<div class="wp-block-woocommerce-cart-cross-sells-block"><!-- wp:heading {"fontSize":"large"} -->
-<h2 class="wp-block-heading has-large-font-size">You may be interested in…</h2>
-<!-- /wp:heading -->
+			<!-- wp:woocommerce/product-collection {"query":{"perPage":3,"pages":1,"offset":0,"postType":"product","order":"asc","orderBy":"title","search":"","exclude":[],"inherit":false,"taxQuery":{},"isProductCollectionBlock":true,"featured":false,"woocommerceOnSale":false,"woocommerceStockStatus":["instock","outofstock","onbackorder"],"woocommerceAttributes":[],"woocommerceHandPickedProducts":[],"filterable":false,"relatedBy":{"categories":true,"tags":true}},"tagName":"div","displayLayout":{"type":"flex","columns":3,"shrinkColumns":true},"dimensions":{"widthType":"fill"},"collection":"woocommerce/product-collection/cross-sells","hideControls":["filterable"],"queryContextIncludes":["collection"],"__privatePreviewState":{"isPreview":true,"previewMessage":"Actual products will vary depending on the page being viewed."}} -->
+			<div class="wp-block-woocommerce-product-collection">
+				<!-- wp:heading {"textAlign":"left","style":{"spacing":{"margin":{"bottom":"1rem"}}}} -->
+				<h2
+					class="wp-block-heading has-text-align-left"
+					style="margin-bottom: 1rem"
+				>
+					You may be interested in…
+				</h2>
+				<!-- /wp:heading -->
+				<!-- wp:woocommerce/product-template -->
+				<!-- wp:woocommerce/product-image {"showSaleBadge":false,"imageSizing":"thumbnail","isDescendentOfQueryLoop":true} -->
+				<!-- wp:woocommerce/product-sale-badge {"align":"right"} /-->
+				<!-- /wp:woocommerce/product-image -->
+				<!-- wp:post-title {"textAlign":"center","isLink":true,"style":{"spacing":{"margin":{"bottom":"0.75rem","top":"0"}},"typography":{"lineHeight":"1.4"}},"fontSize":"medium","__woocommerceNamespace":"woocommerce/product-collection/product-title"} /-->
+				<!-- wp:woocommerce/product-price {"isDescendentOfQueryLoop":true,"textAlign":"center","fontSize":"small"} /-->
+				<!-- wp:woocommerce/product-button {"textAlign":"center","isDescendentOfQueryLoop":true,"fontSize":"small"} /-->
+				<!-- /wp:woocommerce/product-template -->
+			</div>
+			<!-- /wp:woocommerce/product-collection -->
+		</div>
+		<!-- /wp:woocommerce/cart-items-block -->
 
-<!-- wp:woocommerce/cart-cross-sells-products-block -->
-<div class="wp-block-woocommerce-cart-cross-sells-products-block"></div>
-<!-- /wp:woocommerce/cart-cross-sells-products-block --></div>
-<!-- /wp:woocommerce/cart-cross-sells-block --></div>
-<!-- /wp:woocommerce/cart-items-block -->
+		<!-- wp:woocommerce/cart-totals-block -->
+		<div class="wp-block-woocommerce-cart-totals-block">
+			<!-- wp:woocommerce/cart-order-summary-block -->
+			<div class="wp-block-woocommerce-cart-order-summary-block">
+				<!-- wp:woocommerce/cart-order-summary-heading-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-heading-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-heading-block -->
 
-<!-- wp:woocommerce/cart-totals-block -->
-<div class="wp-block-woocommerce-cart-totals-block"><!-- wp:woocommerce/cart-order-summary-block -->
-<div class="wp-block-woocommerce-cart-order-summary-block"><!-- wp:woocommerce/cart-order-summary-heading-block -->
-<div class="wp-block-woocommerce-cart-order-summary-heading-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-heading-block -->
+				<!-- wp:woocommerce/cart-order-summary-coupon-form-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-coupon-form-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-coupon-form-block -->
 
-<!-- wp:woocommerce/cart-order-summary-coupon-form-block -->
-<div class="wp-block-woocommerce-cart-order-summary-coupon-form-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-coupon-form-block -->
+				<!-- wp:woocommerce/cart-order-summary-subtotal-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-subtotal-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-subtotal-block -->
 
-<!-- wp:woocommerce/cart-order-summary-subtotal-block -->
-<div class="wp-block-woocommerce-cart-order-summary-subtotal-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-subtotal-block -->
+				<!-- wp:woocommerce/cart-order-summary-fee-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-fee-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-fee-block -->
 
-<!-- wp:woocommerce/cart-order-summary-fee-block -->
-<div class="wp-block-woocommerce-cart-order-summary-fee-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-fee-block -->
+				<!-- wp:woocommerce/cart-order-summary-discount-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-discount-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-discount-block -->
 
-<!-- wp:woocommerce/cart-order-summary-discount-block -->
-<div class="wp-block-woocommerce-cart-order-summary-discount-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-discount-block -->
+				<!-- wp:woocommerce/cart-order-summary-shipping-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-shipping-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-shipping-block -->
 
-<!-- wp:woocommerce/cart-order-summary-shipping-block -->
-<div class="wp-block-woocommerce-cart-order-summary-shipping-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-shipping-block -->
+				<!-- wp:woocommerce/cart-order-summary-taxes-block -->
+				<div
+					class="wp-block-woocommerce-cart-order-summary-taxes-block"
+				></div>
+				<!-- /wp:woocommerce/cart-order-summary-taxes-block -->
+			</div>
+			<!-- /wp:woocommerce/cart-order-summary-block -->
 
-<!-- wp:woocommerce/cart-order-summary-taxes-block -->
-<div class="wp-block-woocommerce-cart-order-summary-taxes-block"></div>
-<!-- /wp:woocommerce/cart-order-summary-taxes-block --></div>
-<!-- /wp:woocommerce/cart-order-summary-block -->
+			<!-- wp:woocommerce/cart-express-payment-block -->
+			<div class="wp-block-woocommerce-cart-express-payment-block"></div>
+			<!-- /wp:woocommerce/cart-express-payment-block -->
 
-<!-- wp:woocommerce/cart-express-payment-block -->
-<div class="wp-block-woocommerce-cart-express-payment-block"></div>
-<!-- /wp:woocommerce/cart-express-payment-block -->
+			<!-- wp:woocommerce/proceed-to-checkout-block -->
+			<div class="wp-block-woocommerce-proceed-to-checkout-block"></div>
+			<!-- /wp:woocommerce/proceed-to-checkout-block -->
 
-<!-- wp:woocommerce/proceed-to-checkout-block -->
-<div class="wp-block-woocommerce-proceed-to-checkout-block"></div>
-<!-- /wp:woocommerce/proceed-to-checkout-block -->
+			<!-- wp:woocommerce/cart-accepted-payment-methods-block -->
+			<div
+				class="wp-block-woocommerce-cart-accepted-payment-methods-block"
+			></div>
+			<!-- /wp:woocommerce/cart-accepted-payment-methods-block -->
+		</div>
+		<!-- /wp:woocommerce/cart-totals-block -->
+	</div>
+	<!-- /wp:woocommerce/filled-cart-block -->
 
-<!-- wp:woocommerce/cart-accepted-payment-methods-block -->
-<div class="wp-block-woocommerce-cart-accepted-payment-methods-block"></div>
-<!-- /wp:woocommerce/cart-accepted-payment-methods-block --></div>
-<!-- /wp:woocommerce/cart-totals-block --></div>
-<!-- /wp:woocommerce/filled-cart-block -->
+	<!-- wp:woocommerce/empty-cart-block -->
+	<div class="wp-block-woocommerce-empty-cart-block">
+		<!-- wp:heading {"textAlign":"center","className":"with-empty-cart-icon wc-block-cart__empty-cart__title"} -->
+		<h2
+			class="wp-block-heading has-text-align-center with-empty-cart-icon wc-block-cart__empty-cart__title"
+		>
+			Your cart is currently empty!
+		</h2>
+		<!-- /wp:heading -->
 
-<!-- wp:woocommerce/empty-cart-block -->
-<div class="wp-block-woocommerce-empty-cart-block"><!-- wp:heading {"textAlign":"center","className":"with-empty-cart-icon wc-block-cart__empty-cart__title"} -->
-<h2 class="wp-block-heading has-text-align-center with-empty-cart-icon wc-block-cart__empty-cart__title">Your cart is currently empty!</h2>
-<!-- /wp:heading -->
+		<!-- wp:separator {"className":"is-style-dots"} -->
+		<hr
+			class="wp-block-separator has-alpha-channel-opacity is-style-dots"
+		/>
+		<!-- /wp:separator -->
 
-<!-- wp:separator {"className":"is-style-dots"} -->
-<hr class="wp-block-separator has-alpha-channel-opacity is-style-dots"/>
-<!-- /wp:separator -->
+		<!-- wp:heading {"textAlign":"center"} -->
+		<h2 class="wp-block-heading has-text-align-center">New in store</h2>
+		<!-- /wp:heading -->
 
-<!-- wp:heading {"textAlign":"center"} -->
-<h2 class="wp-block-heading has-text-align-center">New in store</h2>
-<!-- /wp:heading -->
-
-<!-- wp:woocommerce/product-new {"rows":1} /--></div>
-<!-- /wp:woocommerce/empty-cart-block --></div>
+		<!-- wp:woocommerce/product-new {"rows":1} /-->
+	</div>
+	<!-- /wp:woocommerce/empty-cart-block -->
+</div>
 <!-- /wp:woocommerce/cart -->
